tests/NormalTests/paczka1/fuzzy1/19140184.err
Error in line 2: HRQKfctPz A587 89,4
Error in line 10: k2fwqgMkKc7 A405 88,4
Error in line 25: SjJmkWZju A587 21,3
